syntax = "proto3";
package cedar_drt;
import "core.proto";
import "validator.proto";

message AuthorizationRequest {
    cedar_policy_core.Request request = 1;
    cedar_policy_core.PolicySet policies = 2;
    cedar_policy_core.Entities entities = 3;
}

message ValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.PolicySet policies = 2;
    cedar_policy_validator.ValidationMode mode = 3;
}

message EvaluationRequest {
    cedar_policy_core.Expr expr = 1;
    cedar_policy_core.Request request = 2;
    cedar_policy_core.Entities entities = 3;
    cedar_policy_core.Expr expected = 4;
}

message EntityValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.Entities entities = 2;
}

message RequestValidationRequest {
    cedar_policy_validator.Schema schema = 1;
    cedar_policy_core.Request request = 2;
}
