syntax = "proto3";
package cedar_drt;
import "AST.proto";
import "Validator.proto";

message AuthorizationRequestMsg {
    cedar_policy_core.Request request = 1;
    cedar_policy_core.LiteralPolicySet policies = 2;
    cedar_policy_core.Entities entities = 3;
}

message ValidationRequestMsg {
    cedar_policy_validator.ValidatorSchema schema = 1;
    cedar_policy_core.LiteralPolicySet policies = 2;
    cedar_policy_validator.ValidationMode mode = 3;
}
